# marky

./: .eslintrc.cjs  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/release-notes/: 0.0.4.md  0.0.5.md  v0.0.3.md
.github/workflows/: release.yml
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppearanceSettings.jsx  BatchExportModal.jsx  CommandPalette.jsx  ConfirmDialog.jsx  CreateNoteModal.jsx  EditorSettings.jsx  ExportModal.jsx  GraphModal.jsx  KeyboardShortcutsModal.jsx  KeymapsModal.jsx  KeymapsSettings.jsx  MarkdownEditor.jsx  MarkdownPreview.css  NoteHistoryModal.jsx  NotificationToast.jsx  OnboardingModal.jsx  ScheduleNoteModal.jsx  ScheduledNotesManager.jsx  SearchModal.jsx  SettingsPage.jsx  Sidebar.jsx  TableOfContents.jsx  Tabs.jsx  TagManager.jsx  TemplateModal.jsx  TitleBar.jsx  Toolbar.jsx  WorkspaceRequiredModal.jsx
src/components/Sidebar/: BacklinkItem.jsx  ContextMenu.jsx  TreeItem.jsx  index.jsx
src/components/dashboard/: WorkspaceDashboard.jsx
src/components/editor/: CodeMirrorEditor.jsx  MarkdownEditor.jsx  MarkdownPreview.css  TableOfContents.jsx  theme.js  (+4 more)
src/data/: templates.js
src/hooks/: useFileWatcher.js  useModalAccessibility.js
src/store/: notesStore.js  settingsStore.js  uiStore.js
src/utils/: appUpdater.js  backup.js  diff.js  fileSystem.js  graphExport.js  noteExport.js  slugify.js
(+26 files in other folders)
